# audio-translator

./: .gitignore  LICENSE  README.md  pyproject.toml
.agent/skills/audio-translator/: SKILL.md
src/audio_translator/: __init__.py  audio_utils.py  cli.py  models.py  pipeline.py
src/audio_translator/backends/: __init__.py  base.py
src/audio_translator/backends/edge/: __init__.py  tts.py
src/audio_translator/backends/gemini/: __init__.py  stt.py  translate.py  tts.py
tests/: test_audio_utils.py  test_backends.py  test_cli.py  test_edge_tts.py  test_models.py  test_pipeline.py
